css/styles.css
/* ... */
.leave-by-text,
.month-total-text,
.waived-day-text {
  text-align: right !important;
  margin-top: auto;
  font-size: 90%;
  font-variant-caps: all-petite-caps;
}

.month-total-text {
  font-weight: bold;
}

.leave-by-time,
.month-total-time {
  text-align: left;
}

.footer-pre {
  position: fixed;
  width: 100%;
  left: 0;
  right: 0;
  bottom: 60px;
  height: 16px;
}

.month-summary {
  width: 100%;
  background-color: var(--table-bground);
}

.footer {
  position: fixed;
  left: 0;
  right: 0;
  bottom: 0;
  height: 50px;
  font-size: 200%;
  text-align: center;
}

.punch-button {
  opacity: 0.9;
  width: 100%;
  height: 100%;
  outline: none;
  border: none;
  color: var(--punch-color);
  background-color: var(--punch-bground);
}

.punch-button:disabled {
  opacity: 0.5;
  color: var(--punch-disable-bground);
}

.waiver-img {
  display: none;
}

.waiver-trigger:hover {
  cursor: pointer;
}

.waiver-trigger:hover + .day > .day-number {
  display: none;
}

.waiver-trigger:hover + .day > .waiver-img {
  display: block;
}

.arrow {
  border: solid;
  border-color: var(--page-color);
  border-width: 0 3px 3px 0;
  display: inline-block;
  padding: 3px;
}

.arrow.disabled {
  border-color: var(--disabled-input-bground);
  cursor: inherit !important;
}

.right {
  transform: rotate(-45deg);
  -webkit-transform: rotate(-45deg);
}

.left {
  transform: rotate(135deg);
  -webkit-transform: rotate(135deg);
}

.hidden {
  display: none !important;
}

.half-width {
  width: 50%;
}

/* The switch - the box around the slider */

.switch {
  position: relative;
  display: inline-block;
  width: 30px;
  height: 15px;
}

/* Hide default HTML checkbox */

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: var(--slider-background-color);
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.slider::before {
  position: absolute;
  content: "";
  height: 15px;
  width: 15px;
  background-color: var(--slider-unchecked-color);
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

input:checked + .slider {
  background-color: var(--slider-checked-color);
}

input:focus + .slider {
  box-shadow: 0 0 1px var(--slider-checked-color);
}

input:checked + .slider::before {
  -webkit-transform: translateX(15px);
  -ms-transform: translateX(15px);
  transform: translateX(15px);
}

/* Rounded sliders */

.slider.round {
  border-radius: 30px;
}

.slider.round::before {
  border-radius: 50%;
}

/* Notification settings */

#notifications-interval:disabled,
input:disabled + .slider {
  background-color: var(--disabled-input-bground);
}

/** Common window styles **/

.common-window {
  font-family: 'Montserrat', sans-serif;
  padding-right: 10px;
  padding-left: 10px;
  padding-bottom: 10px;
  width: 100%;
  height: 90%;
}

.common-window .header-title {
  font-size: 25px;
  border-bottom: 4px solid var(--table-total-border);
}

.common-window .window-tab {
  padding-top: 10px;
}

.common-window .tab-content {
  padding-top: 10px;
}

.common-window p.header-help {
  font-variant-caps: all-petite-caps;
  font-size: 15px;
  margin-bottom: 0px;
}

.common-window .section-title {
  font-size: 20px;
  color: var(--title-color);
  margin-bottom: 5px;
  margin-top: 15px;
  border-bottom: 1px solid var(--table-total-border);
}

.common-window input, .common-window select, .common-window option {
  color: var(--page-color);
  background-color: var(--page-bground);
}

.common-window input[type="time" i]::-webkit-calendar-picker-indicator {
  background-image: var(--datepicker-icon);
}

.common-window input[type="date" i]::-webkit-calendar-picker-indicator {
  background-image: var(--calendar-icon);
}

/* Preferences page styles */

#preferences-window select,
#preferences-window option,
#preferences-window input {
  font-variant-caps: all-petite-caps;
  border: solid 1px var(--input-border);
  height: inherit;
}

#preferences-window .weekdays-selector input {
  display: none;
}

#preferences-window .weekdays-selector input[type=checkbox] + label {
  font-variant-caps: all-petite-caps;
  display: inline-block;
  border-radius: 10px;
  background: var(--weekday-background);
  height: 40px;
  width: 45px;
  margin-right: 3px;
  line-height: 40px;
  text-align: center;
  cursor: pointer;
  user-select: none;
}

#preferences-window .weekdays-selector input[type=checkbox]:checked + label {
  background: var(--weekday-selected);
  color: #fff;
}

#preferences-window input[type=text]:invalid {
  color: rgb(255, 71, 71);
}

#preferences-window .flex-box {
  display: flex;
  height: 25px;
  justify-content: space-between;
}

#preferences-window p {
  font-variant-caps: all-petite-caps;
  text-align: center;
}

/* Waiver page styles */

#workday-waiver-window .section-title {
  margin-bottom: 15px;
  margin-top: 30px;
}

#workday-waiver-window input {
  border: none;
}

#workday-waiver-window .container {
  padding-left: 0;
  padding-right: 0;
}

#workday-waiver-window table {
  font-size: 12px;
}

#workday-waiver-window thead {
  font-weight: bold;
}

#table-foot-helper {
  padding-top: 8px;
  font-weight: bold;
  text-align: center;
}

#workday-waiver-window th, #workday-waiver-window td {
  padding-right: 5px;
  padding-left: 5px;
}

#workday-waiver-window .waive-button {
  opacity: 0.9;
  width: 100%;
  height: 24px;
  outline: none;
  border: none;
  color: var(--punch-color);
  background-color: var(--punch-bground);
}

#workday-waiver-window .waive-button:disabled {
  opacity: 0.5;
  color: var(--punch-disable-bground);
}

#workday-waiver-window #waiver-list-table,
#workday-waiver-window #holiday-list-table {
  width: 100%;
}

/** Day view related styles **/

html[data-view='day'] .container {
  margin-bottom: 0px;
}

html[data-view='day'] .title-header {
  width: 100%;
  margin-bottom: 80px;
}

html[data-view='day'] .title-header-text {
  font-size: 300%;
}
/* ... */

